// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InstallationLogView /> should not show any message when cluster status is error 1`] = `
<div
  className="log-window-container"
/>
`;

exports[`<InstallationLogView /> should render with logs 1`] = `
<div
  className="log-window-container"
>
  <p
    className="pf-u-mt-sm"
  >
    Cluster installation has started. Installation log will appear here once it becomes available.
  </p>
</div>
`;

exports[`<InstallationLogView /> should stop the timer when recieving 403 error code 1`] = `
<div
  className="log-window-container"
>
  <p
    className="pf-u-mt-sm"
  >
    This cluster is installing so some data might not be available. This may take a few minutes.
  </p>
</div>
`;

exports[`<InstallationLogView /> without logs should render 1`] = `
<div
  className="log-window-container"
>
  <p
    className="pf-u-mt-sm"
  >
    Cluster installation has started. Installation log will appear here once it becomes available.
  </p>
</div>
`;
